# current_version 0.3.0
# use `bin/publish` to update the version.

[package]
name = "overworld"
description = "Metapackage library for adding game systems useful for incremental, RPG, and management games"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
overworld_components = { version = "0.3.0", path = "components" }
overworld_dice = { version = "0.3.0", path = "dice" }

[features]
default = [
    "serde",
    "progress",
    "progression",
    "dice",
    "counter",
]
all = [
    "default"
]
serde = ["overworld_components/serde", "overworld_dice/serde"]
progression = []
progress = []
counter = []
resource = []
# component: dice
dice = ["roll", "difficulty"]
difficulty = ["roll"]
roll = []

[badges]
maintenance = { status = "actively-developed" }

[workspace]
members = [
    "components"
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Zarthus <zarthus@liefland.net>",
    "Overworld Team <https://github.com/orgs/Liefland/teams/overworld>",
    "Overworld Contributors <https://github.com/Liefland/overworld/network/contributors>"
]
repository = "https://github.com/Liefland/overworld"
homepage = "https://github.com/Liefland/overworld"
categories = ["game-development", "mathematics", "text-processing"]
keywords = ["game", "rpg", "incremental", "management"]
readme = "README.md"
publish = true

[[example]]
name = "difficulty_check"
path = "examples/dice.rs"
required-features = ["dice"]
