# current_version 0.4.0
# use `bin/publish` to update the version.

[package]
name = "overworld"
description = "Metapackage library for adding game systems useful for incremental, RPG, and management games"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
overworld_dice = { version = "0.4.0", path = "components/dice" }
overworld_progression = { version = "0.4.0", path = "components/progression" }
overworld_incremental = { version = "0.4.0", path = "components/incremental" }
overworld_resource = { version = "0.4.0", path = "components/resource" }

[features]
default = [
    "serde",
    "dice",
    "resource",
    "progression",
    "progress"
]
all = [
    "default",
    "rpg",
    "management",
    "incremental"
]
serde = [
    "overworld_incremental/serde",
    "overworld_dice/serde",
    "overworld_progression/serde",
    "overworld_resource/serde"
]

# virtual component: rpg - this component is an alias for features useful in RPGs
rpg = ["dice", "progression", "progress", "resource"]
# virtual component: management - this component is an alias for features useful in management games
management = ["resource"]

# component: incremental - features useful for incremental games + main package
incremental = ["counter", "progress", "resource"]
counter = []
progress = []

resource = [] # enable component 'resource'
progression = [] # enable component 'progression'

# component: dice
dice = ["roll", "difficulty"]
difficulty = ["roll"]
roll = []

[badges]
maintenance = { status = "actively-developed" }

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Zarthus <zarthus@liefland.net>",
    "Overworld Team <https://github.com/orgs/Liefland/teams/overworld>",
    "Overworld Contributors <https://github.com/Liefland/overworld/network/contributors>"
]
repository = "https://github.com/Liefland/overworld"
homepage = "https://github.com/Liefland/overworld"
categories = ["game-development", "mathematics", "text-processing"]
keywords = ["game", "rpg", "incremental", "management"]
readme = "README.md"
publish = true

[[example]]
name = "difficulty_check"
path = "examples/dice.rs"
required-features = ["dice"]
