[package]
name = "overworld_components"
description = "A library for adding game systems useful for incremental and management games"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
rand = "0.8.5"

[dependencies.serde]
version = "1.0.188"
optional = true
features = ["derive"]

[features]
default = ["serde"]
