[package]
name = "overworld_dice"
description = "Overworld library - Dice components"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
rand = "0.8.5"

[dependencies.serde]
version = "1.0.188"
optional = true
features = ["derive"]

[features]
default = ["serde"]
