[package]
name = "overworld_5e"
description = "Overworld D&D 5e Library - Follows the 5e ruleset"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
overworld_dice = { path = "../dice" }

# Enables better tooling for Enums
[dependencies.strum]
version = "0.26.1"
optional = true
features = ["derive"]

[dependencies.strum_macros]
version = "0.26.2"
optional = true

[dependencies.serde]
version = "1.0.196"
optional = true
features = ["derive"]

[features]
default = ["serde", "better_enums"]
better_enums = ["strum_macros", "strum"]
all_expansions = [
    "expansion_motm",
    "expansion_dragonlance",
    "expansion_spelljammer",
    "expansion_strixhaven",
    "expansion_van_richten",
    "expansion_mythic_odysseys",
    "expansion_eberron",
    "expansion_acquisitions",
    "expansion_guildmasters",
    "expansion_sword_coast",
    "expansion_locathah",
    "expansion_grung",
]

# Note that in the event of an expansion conflict, behaviour is not strictly defined.
# To save dev resources and time, not all conflicts are fully implemented, MRs welcome.
# Enables Monster of the Multiverse support
expansion_motm = []
# Enables Dragonlance: Shadow of the Dragon Queen support
expansion_dragonlance = []
# Enables Spelljammer: Adventures in Space support
expansion_spelljammer = []
# Enables Strixhaven: A Curriculum of Chaos support
expansion_strixhaven = []
# Enables Van Richten's Guide to Ravenloft support
expansion_van_richten = []
# Enables Mythics Odysseys of Theros
expansion_mythic_odysseys = []
# Enables Eberron's Rising from the Last War
expansion_eberron = []
# Enables Acquisitions Incorporated
expansion_acquisitions = []
# Enables Guildmaster's Guide to Ravnica
expansion_guildmasters = []
# Sword Coast Adventurer's Guide
expansion_sword_coast = []
# Locathah Rising
expansion_locathah = []
# Enables One Grung Above
expansion_grung = []

[[example]]
name = "character_creation"
path = "examples/character_creation.rs"
required-features = ["better_enums"]
