[package]
name = "overworld_incremental"
description = "Overworld Incremental Library - Tools for incremental games"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies.serde]
version = "1.0.188"
optional = true
features = ["derive"]

[features]
default = ["serde"]
