[package]
name = "overworld_progression"
description = "Overworld Progression Library - Experience, Milestone and Level progression"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
rand = "0.8.5"

[dependencies.serde]
version = "1.0.193"
optional = true
features = ["derive"]

[features]
default = ["serde"]
